# TP7_starterPack

./: CMakeLists.txt
src/: main.cpp
src/geometrie/: coords.cpp  coords.h
src/maillage/: maillage.cpp  maillage.h  sommet.cpp  sommet.h  triangle.cpp  triangle.h
